# tftsr-devops_investigation

./: .eslintignore  .eslintrc.json  .gitignore  2026-hackathon_AgenticFeature.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  FIX_SUMMARY.md  GenAI API User Guide.md  HANDOFF-MSI-GENAI.md  INTEGRATION_AUTH_GUIDE.md  IRONRDP_PATCH.md  LIBSODIUM_BUILD_FIX.md  LIBSODIUM_FIX_SUMMARY.md  LICENSE  MCP_SERVER_SUPPORT.md  Makefile  PLAN.md  PROXMOX_CEPH_PARITY_TICKET_SUMMARY.md  PROXMOX_PARITY_SUMMARY.md  PR_FINDINGS_ACTION_PLAN.md  PR_RDP_BLACKSCREEN_FIX.md  PR_REVIEW_RESPONSE.md  PR_SUMMARY.md  RDP_IMPLEMENTATION_SUMMARY.md  README.md  REVIEW_FIX_SUMMARY.md  SECURITY_AUDIT.md  SSH_TUNNEL_COMPLETE.md  TICKET-attachment-db-storage-recall.md  TICKET-kube-action-namespace-stability.md  TICKET-kube-pr-review-fixes.md  TICKET-kube-ui-feature-parity.md  TICKET-pii-bypass-chat-attachments.md  TICKET-proxmox-add-remote.md  TICKET_PERSISTENT_WEBVIEWS.md  TICKET_SUMMARY.md  TICKET_SUMMARY_AI_DISCLAIMER.md  cliff.toml  eslint.config.js  (+12 more)
.cargo/: config.toml
.docker/: Dockerfile.linux-amd64  Dockerfile.linux-arm64  Dockerfile.windows-cross
.github/: AZURE_BOARDS_INTEGRATION.md  CODEOWNERS  COPILOT_SETUP.md  dependabot.yml
.opencode/: openwork.json
.woodpecker/: .woodpecker-ci-test  README_CI.md  ci-test.txt  release.yml  test.yml
cli/: package.json
cli/src/: main.ts
docs/: 2026-HACKATHON-SUMMARY.md  2026-hackathon_AgenticFeature.md  HACKATHON-BRIEF.md  HACKATHON-SUBMISSION-CONCISE.md  HACKATHON-SUBMISSION.md  KUBERNETES-MANAGEMENT-IMPLEMENTATION-PLAN.md  PROXMOX-COMPLETE.md  PROXMOX-FEATURE-PARITY-STATUS.md  PROXMOX-IMPLEMENTATION-SUMMARY.md  PROXMOX-IMPLEMENTATION.md  PROXMOX-QUICK-REFERENCE.md  RELEASE_NOTES.md  TICKET-proxmox-integration.md  TICKET-proxmox-migration-and-console-clipboard.md  build-fix-windows-macos.md  v1.0.5-summary.md  v1.0.7-summary.md  v1.0.8-summary.md
plans/: remote-desktop-implementation.md
scripts/: download-helm.sh  download-kubectl.sh  update-version.mjs  validate-ci-images.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Cargo.toml.backup  build.rs  memset_s_shim.c  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  memset_shim.rs  secure_storage.rs  state.rs
src-tauri/src/ai/: agents.rs  anthropic.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai.rs.bak  provider.rs  tools.rs
src-tauri/src/ai/agents/: devops_incident_responder.md
src-tauri/src/audit/: log.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/commands/: agentic.rs  ai.rs  analysis.rs  database.rs  database_security.rs  db.rs  docs.rs  image.rs  integrations.rs  kube.rs  metrics.rs  mod.rs  proxmox.rs  remote.rs  shell.rs  system.rs  table_browser.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  remote_types.rs
src-tauri/src/db_drivers/: error.rs  mod.rs  pool.rs  traits.rs  types.rs
src-tauri/src/db_drivers/cassandra/: driver.rs  mod.rs  schema.rs  types.rs
src-tauri/src/db_drivers/import_export/: csv.rs  json.rs  mod.rs  sql.rs
src-tauri/src/db_drivers/mongodb/: driver.rs  mod.rs  schema.rs  types.rs
src-tauri/src/db_drivers/mysql/: driver.rs  mod.rs  schema.rs  types.rs
src-tauri/src/db_drivers/postgres/: driver.rs  mod.rs  schema.rs  types.rs
src-tauri/src/db_drivers/redis/: driver.rs  mod.rs  types.rs
src-tauri/src/db_drivers/visualization/: er_diagram.rs  mod.rs
src-tauri/src/docs/: exporter.rs  mod.rs  postmortem.rs  rca.rs
src-tauri/src/integrations/: auth.rs  azuredevops.rs  azuredevops_search.rs  callback_server.rs  confluence.rs  confluence_search.rs  mod.rs  native_cookies.rs  native_cookies_macos.rs  query_expansion.rs  servicenow.rs  servicenow_search.rs  webview_auth.rs  webview_fetch.rs  webview_search.rs
src-tauri/src/kube/: client.rs  mod.rs  portforward.rs  refresh.rs  watcher.rs
src-tauri/src/mcp/: adapter.rs  client.rs  commands.rs  discovery.rs  mod.rs  models.rs  store.rs
src-tauri/src/mcp/transport/: http.rs  stdio.rs
src-tauri/src/metrics/: client.rs  mod.rs
src-tauri/src/ollama/: hardware.rs  installer.rs  manager.rs  mod.rs  recommender.rs
src-tauri/src/pii/: detector.rs  mod.rs  patterns.rs  redactor.rs
src-tauri/src/proxmox/: acme.rs  apt.rs  auth_realm.rs  backup.rs  ceph.rs  ceph_cluster.rs  certificates.rs  client.rs  cluster.rs  console.rs  firewall.rs  ha.rs  lxc.rs  metrics.rs  migration.rs  mod.rs  network.rs  node.rs  pbs.rs  sdn.rs  shell.rs  storage.rs  tasks.rs  tfa.rs  updates.rs  updates_ext.rs  validate.rs  views.rs  vm.rs
src-tauri/src/remote/: connection.rs  diagnostics.rs  input.rs  mod.rs  rdp.rs  rdp_client.rs  ssh_tunnel.rs  types.rs  vnc.rs  websocket_server.rs
src-tauri/src/shell/: classifier.rs  executor.rs  helm.rs  kubeconfig.rs  kubectl.rs  mod.rs  pty.rs  session.rs  tests.rs
src-tauri/tests/: openssl_vendored_test.rs  rdp_live.rs
src-tauri/tests/integration/kube/: cluster_management.rs  error_scenarios.rs  multi_cluster.rs  port_forwarding.rs  session_recovery.rs
src-tauri/tests/kube/: cluster_management.rs  error_scenarios.rs  mod.rs  multi_cluster.rs  port_forwarding.rs  session_recovery.rs
tests/: README.md  docker-compose.yml
tickets/: BUILD_FIX_SUMMARY.md  FIX_PLAN.md  FIX_SUMMARY.md  INVESTIGATION_FINDINGS.md  IRONRDP_PATCH.md  KUBERNETES_V1.1.0_ASSESSMENT.md  LIBSODIUM_BUILD_FIX.md  LIBSODIUM_BUILD_HISTORY.md  LIBSODIUM_PKG_CONFIG_FIX.md  PR_196_FINAL_SUMMARY.md  PR_LIBSODIUM_FIX.md  PR_SUMMARY.md  RDP-add-session-and-tabs.md  RDP_IMPLEMENTATION_COMPLETE.md  RDP_SSH_TUNNEL_FINAL.md  RDP_Usable_Client_Summary.md  TICKET-SUMMARY-host-shell.md  TICKET-SUMMARY-proxmox-parity.md  TICKET-freelens-feature-inventory.md  TICKET-github-release-and-pr-review.md  TICKET-kube-logs-pty-proxmox-ceph.md  TICKET-kubernetes-lens-ui.md  TICKET-pii-bypass-chat-attachments.md  TICKET-proxmox-add-remote.md  TICKET-proxmox-reconnect.md  TICKET-proxmox-v1.2.1-fixes.md  ci-runner-speed-optimization.md  fix-proxmox-and-ai-issues.md  freelens-feature-inventory.json  (+11 more)
(+432 files in other folders)
