[package]
name = "trcaa"
version = "3.3.0"
edition = "2021"
license = "MIT"

[lib]
name = "trcaa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
regex = "1"
aho-corasick = "1"
uuid = { version = "1", features = ["v7"] }
printpdf = "0.7"
docx-rs = "0.4"
sha2 = { version = "0.10", features = ["std"] }
hex = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
dirs = "5"
aes-gcm = "0.10"
zeroize = "1.7"
rand = "0.9"
lazy_static = "1.4"
warp = "0.3"
urlencoding = "2"
infer = "0.15"
url = "2.5.8"
smallvec = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
lopdf = "0.31"
zip = "0.6"
quick-xml = "0.36"
rmcp = { version = "1.7.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
http = "1.4"
flate2 = { version = "1", features = ["rust_backend"] }
serde_yaml = "0.9"
portable-pty = "0.8"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
# Using patched IronRDP fork with git dependencies to enable CI builds
# Patch fixes RDP6 bitmap stride mismatch causing horizontal striping on DGX
# Fork: https://github.com/armconsol/IronRDP.git
# Branch: fix/rdp6-bitmap-stride-mismatch
# Original PR: https://github.com/Devolutions/IronRDP/pull/1398
# When upstream PR merges, revert to official crates.io releases
ironrdp = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1", features = [
    "svc",
    "cliprdr",
    "graphics",
    "input",
    "connector",
    "session",
    "displaycontrol",
] }
ironrdp-async = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
ironrdp-tokio = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
ironrdp-graphics = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
ironrdp-input = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
ironrdp-cliprdr = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
ironrdp-blocking = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
# ironrdp-session 0.10 (bundled by ironrdp 0.16) is required to render slow-path
# graphics/pointer updates that xrdp-style servers send — older releases abort
# the session with "unhandled PDU: Update PDU", leaving a black screen. This
# generation raises the MSRV to 1.89; the PR test gate runs on nightly and the
# release builder images are pinned to a matching Rust in .docker/.
ironrdp-tls = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1", features = ["rustls"] }
ironrdp-pdu = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
ironrdp-svc = { git = "https://github.com/armconsol/IronRDP.git", rev = "b0cac434a3d61bae55685e9ebd32172d9039d3f1" }
x509-cert = { version = "0.2", features = ["std"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
sspi = "0.21"
image = "0.25"
# Database drivers for v3.0.0 database management feature
# Using native-tls with vendored-openssl to avoid system OpenSSL dependencies in CI
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
sqlx = { version = "0.8", features = ["postgres", "mysql", "runtime-tokio-native-tls"], default-features = false }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
mongodb = "3"
bson = "2.13"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
scylla = "0.13"
num-bigint = "0.4"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
csv = "1.3"
petgraph = "0.6"
# Use vendored OpenSSL to avoid system dependency issues in CI/cross-platform builds
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
openssl = "0.10"  # For testing vendored OpenSSL functionality

# Native OS keychain backends (keyring defaults to an in-memory mock store).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.0", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.0", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.0", features = ["sync-secret-service"] }

[profile.release]
opt-level = "s"
strip = true




